<resources>

    <string name="login">로그인</string>
    <string name="join">회원가입</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="password_check">Password Check</string>
    <string name="name">Name</string>
    <string name="phone">Phone</string>

    <string name="app_name">Study Group Manager</string>
    <string name="title_activity_login">Login</string>
    <string name="title_activity_join">Join</string>
    <string name="title_activity_settings">Settings</string>

    <string name="init_page_image">Init Page Image</string>

</resources>